# Hospital-mgmt-OpenEnv

./: .env  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  train.py
env/: hospital_logic.py  models.py  triage_env.py
server/: __init__.py  app.py  hospital_logic.py  hospital_mgmt_env_environment.py
training/: dqn_agent.py
